FLA-1333: Setup tests to run in Github Actions (#91)
* feat: setup workflow for running tests in gh actions

* feat: use random ports and testcontainers for communication instead of relying on host

* feat: split tests and reports, include kover CLI

* feat: use kover java agent, mount kover volume and run as user 0

* feat: add kover agent and related configs for environment

* fix: make local dev work outside tests

* fix: use readyendpoint for authentik in compose

* chore: add options to gradlew tasks for cache and debugging

* chore: increase wait duration to 15m